--- a/frontend/PPAI-Front/src/components/Menu/Menu.css
+++ b/frontend/PPAI-Front/src/components/Menu/Menu.css
@@ -12,7 +12,7 @@
   left: -10px;
   right: -10px;
   bottom: -10px;
-  background-image: url('../../../public/FondoSismografo.png');
+  background-image: url('/FondoSismografo.png');
   background-size: cover;
   background-position: center;
   filter: blur(6px);
